--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,5 @@
     <string name="search_bhajan">Search By Name</string>
     <string name="search_deity">Search By Deity</string>
     <string name="search">Search</string>
-    <string name="hello">Hello World, SoftwarePassionView!</string>
-    <string name="main_no_items">No orders to display</string>
+    <string name="play">Play</string>
 </resources>
