--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="search_bhajan">Search By Name(E.g. Prema Muditha)</string>
     <string name="search_deity">Search By Deity(E.g. Krishna, Jesus)</string>
     <string name="search">Search</string>
+    <string name="back_to_search_page">"Back to Search Page"</string>
     <string name="play">Play</string>
     <string name="pause">Pause</string>
     <string name="favorite">Like</string>
