--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="afri">Africa Stream</string>
     <string name="ameri">American Stream</string>
     <string name="main_no_items">No orders to display</string>
-    <string name="stream_note">Note: Once you click on a stream, it might take upto 20 seconds to buffer. Please wait till data is buffered.</string>
-    <string name="click_on_fav">Click on a Bhajan below to view its details.</string>
-    <string name="list_desc">Listed below are the Bhajans according to your selected criteria. Click on them to view lyrics, meaning, deity, raaga and also to play.</string>
+    <string name="stream_note">Note: Once you click on a stream, it might take up to 20 seconds to buffer. Please wait till data is buffered.</string>
+    <string name="click_on_fav">Scroll and click on a Bhajan below to view its details like raaga, deity, lyrics, meaning and to play the Bhajan. Note that you must be connected to the Internet or cellular data to view Bhajan details. </string>
+    <string name="list_desc">Listed below are the Bhajans according to your selected criteria. You can also go to the Search Page by clicking on the button below.</string>
     <string name="fav_desc">Listed below are you favorite Bhajans. To remove them from your favorites, go to the Bhajan details and click on Unlike.</string>
     <string name="intro_text"> With Sankeerthan (or \'good music\'), you can search for a Bhajan and view its meaning, lyrics, raaga, deity and to play it. You can search by the name of the bhajan or the specific deity on which the Bhajan is based. Another criteria to search is \'raaga\' which are standard Indian melodic modes. You can also mark your favorite Bhajans and listen to them at any time. Please note that you must be connected to Internet to listen to any Bhajan, view its lyrics, meaning etc. You can also listen to RadioSai Live Streams or view \'Sai Inspires\' for the day. Please send feedback/suggestions to Sankeerthan.Bhajan@gmail.com. Aum Sai Ram</string>
     <string name="facebook">facebook.com/SankeerthanApp</string>
