--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,9 +20,10 @@
     <string name="ameri">American Stream</string>
     <string name="main_no_items">No orders to display</string>
     <string name="stream_note">Note: Once you click on a stream, it might take up to 20 seconds to buffer. Please wait till data is buffered.</string>
-    <string name="click_on_fav">Scroll the list below and click on a Bhajan to view its details like raaga, deity, lyrics, meaning and to play the Bhajan. Note that you must be connected to the Internet or cellular data to view Bhajan details. </string>
-    <string name="list_desc">Listed below are the Bhajans according to your selected criteria. You can also go to the Search Page by clicking on the button below.</string>
-    <string name="fav_desc">Listed below are you favorite Bhajans. To remove them from your favorites, go to the Bhajan details and click on Unlike.</string>
+    <string name="click_on_fav"> Note that you must be connected to the Internet or cellular data to view Bhajan details like lyrics, raaga, deity, meaning and to play it. </string>
+    <string name="click_on_list"> Note that you must be connected to the Internet or cellular data to view Bhajan details. You may also go back to Search Page by clicking the button in this page. </string>
+    <string name="list_desc">Listed below are the Bhajans according to your selected criteria. Scroll the list below and view Bhajan Details like raaga, deity, lyrics, meaning and to play the Bhajan. </string>
+    <string name="fav_desc">Scroll the list below to select and play a favorite Bhajan. To remove them from your favorites, go to the Bhajan details and click on Unlike.</string>
     <string name="intro_text"> With Sankeerthan (or \'good music\'), you can search for a Bhajan and view its meaning, lyrics, raaga, deity and to play it. You can search by the name of the bhajan or the specific deity on which the Bhajan is based. Another criteria to search is \'raaga\' which are standard Indian melodic modes. You can also mark your favorite Bhajans and listen to them at any time. Please note that you must be connected to Internet to listen to any Bhajan, view its lyrics, meaning etc. You can also listen to RadioSai Live Streams or view \'Sai Inspires\' for the day. Please send feedback/suggestions to Sankeerthan.Bhajan@gmail.com. Aum Sai Ram</string>
     <string name="facebook">facebook.com/SankeerthanApp</string>
     <string name="twitter">twitter.com/SankeerthanApp</string>
