--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="list_desc">Listed below are the Bhajans according to your selected criteria. Scroll the list below and view Bhajan Details like raaga, deity, lyrics, meaning and to play the Bhajan. </string>
     <string name="fav_desc">Scroll the list below to select and play a favorite Bhajan. To remove them from your favorites, go to the Bhajan details and click on Unlike.</string>
     <string name="intro_text"> With Sankeerthan (or \'good music\'), you can search for a Bhajan and view its meaning, lyrics, raaga, deity and to play it. You can search by the name of the bhajan or the specific deity on which the Bhajan is based. Another criteria to search is \'raaga\' which are standard Indian melodic modes. You can also mark your favorite Bhajans and listen to them at any time. Please note that you must be connected to Internet to listen to any Bhajan, view its lyrics, meaning etc. You can also listen to RadioSai Live Streams or view \'Sai Inspires\' for the day. Please send feedback/suggestions to Sankeerthan.Bhajan@gmail.com. Aum Sai Ram</string>
-    <string name="facebook">facebook.com/SankeerthanApp</string>
+    <string name="facebook">facebook.com/SankeerthanBhajan</string>
     <string name="twitter">twitter.com/SankeerthanApp</string>
     <string name="hint_email">Please enter your email (Required)</string>
     <string name="hint_name">Please enter your name (Required)</string>
